--- a/files/redis.conf
+++ b/files/redis.conf
@@ -355,7 +355,7 @@ set-proc-title yes
 # {unixsocket}      Unix domain socket listening on, or "".
 # {config-file}     Name of configuration file used.
 #
-proc-title-template "{title} {listen-addr} {server-mode}"
+proc-title-template "{title} {listen-addr} {server-mode} {port}"
 
 ################################ SNAPSHOTTING  ################################
 
@@ -401,7 +401,7 @@ stop-writes-on-bgsave-error yes
 # By default compression is enabled as it's almost always a win.
 # If you want to save some CPU in the saving child set it to 'no' but
 # the dataset will likely be bigger if you have compressible values or keys.
-rdbcompression yes
+rdbcompression no
 
 # Since version 5 of RDB a CRC64 checksum is placed at the end of the file.
 # This makes the format more resistant to corruption but there is a performance
@@ -410,7 +410,7 @@ rdbcompression yes
 #
 # RDB files created with checksum disabled have a checksum of zero that will
 # tell the loading code to skip the check.
-rdbchecksum yes
+rdbchecksum no
 
 # Enables or disables full sanitation checks for ziplist and listpack etc when
 # loading an RDB or RESTORE payload. This reduces the chances of a assertion or
