--- a/files/nextcloud-config/nginx/nginx.conf
+++ b/files/nextcloud-config/nginx/nginx.conf
@@ -6,29 +6,31 @@ pid               /var/run/nginx.pid;
 
 events {
 
-    worker_connections  1024;
+    worker_connections 1024;
 
 }
 
 
 http {
 
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include      /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log /var/log/nginx/access.log main;
 
-    sendfile        on;
-    #tcp_nopush     on;
+    sendfile    on;
+    #tcp_nopush on;
 
     # Prevent nginx HTTP Server Detection
-    server_tokens   off;
+    server_tokens off;
 
-    keepalive_timeout  65;
+    keepalive_timeout 65 50;
+    send_timeout      50;
+    resolver_timeout  20;
 
     include /etc/nginx/conf.d/*.conf;
 
