Updated nginx nextcloud.conf.template (for NextCloud)
Added fastcgi timeouts (fastcgi_read_timeout, fastcgi_send_timeout and fastcgi_connect_timeout variables [all set to 50s])

--- a/files/nextcloud-config/nginx/templates/nextcloud.conf.template
+++ b/files/nextcloud-config/nginx/templates/nextcloud.conf.template
@@ -20,7 +20,12 @@ server {
 
     # set max upload size
     client_max_body_size 512M;
+
+    # set fastcgi buffers and timeouts
     fastcgi_buffers 64 4K;
+    fastcgi_read_timeout 50;
+    fastcgi_send_timeout 50;
+    fastcgi_connect_timeout 50;
 
     # Enable gzip but do not remove ETag headers
     gzip on;
