Updated docker-compose-backup.sh, nextcloud.env.sample, duplicati.env.sample
Removed /var from data_dir variable path /var/opt/data (use /opt symlink instead), shorten skip_volumes list (only generic volumes), added posibility to add Docker volumes to skip for backup through BACKUP_SKIP_VOLUMES environment variable, renamed match variable into skip (for clarity), added check whether tmp_data_dir was actually removed at the end of archiving backup (echo warning if not)

--- a/files/duplicati.env.sample
+++ b/files/duplicati.env.sample
@@ -2,3 +2,6 @@
 OBJECTSTORE_S3_URL=<S3_URL>
 OBJECTSTORE_S3_BUCKET=<S3_BUCKET>
 OBJECTSTORE_S3_AUTHFILE=
+
+# Docker Compose backup config
+BACKUP_SKIP_VOLUMES=/opt/data/backups
