--- a/files/nextcloud.env.sample
+++ b/files/nextcloud.env.sample
@@ -32,3 +32,6 @@ OBJECTSTORE_S3_AUTOCREATE=true
 # SMTP_PASSWORD=
 # SMTP_PASSWORD_FILE=
 # SMTP_AUTHTYPE=
+
+# Docker Compose backup config
+BACKUP_SKIP_VOLUMES=("/var/lib/docker/volumes/nextcloud_mysql/_data" "/var/lib/docker/volumes/nextcloud_redis/_data")
